layout fixes and dark mode support

--- a/app/index.css
+++ b/app/index.css
@@ -7,15 +7,27 @@ body {
     'Segoe UI Symbol';
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #121212;
+    color: rgba(255, 255, 255, 0.9);
+  }
+  a {
+    color: white;
+  }
+}
+
 .container {
   margin: 0 auto;
   max-width: 1200px;
 }
 
-.demo-wrapper {
-  display: grid;
-  grid-gap: 20px;
-  grid-auto-columns: calc(50% - 10px);
+@media (min-width: 1040px) {
+  .demo-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-auto-columns: calc(50% - 10px);
+  }
 }
 
 .demo-el-wrapper:nth-of-type(1) {
@@ -37,10 +49,22 @@ body {
   color: rgba(0, 0, 0, 0.85);
 }
 
+@media (prefers-color-scheme: dark) {
+  .demo-title {
+    color: white;
+  }
+}
+
 .demo {
   box-shadow: 0px 3px 22px rgba(0, 0, 0, 0.05);
   border-radius: 30px;
   overflow: hidden;
+}
+@media (prefers-color-scheme: dark) {
+  .demo {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow: none;
+  }
 }
 
 .demo-preview {
@@ -64,9 +88,27 @@ body {
 }
 
 .demo-controls label {
+  border-radius: 2px;
   font-family: monospace;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.05);
   padding: 4px 10px;
+  width: 50%;
+  white-space: pre;
+  overflow: auto;
+}
+
+@media (min-width: 720px) {
+  .demo-controls label {
+    white-space: initial;
+    width: initial;
+    overflow: initial;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .demo-controls label {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
 
 .control-wrapper {
@@ -103,18 +145,42 @@ h1 {
   margin-right: 12px;
 }
 
+@media (prefers-color-scheme: dark) {
+  .github-link svg path {
+    fill: white;
+  }
+}
+
 blockquote {
   margin: 1.5rem 0;
   padding-left: 2rem;
   border-left: 10px solid rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.8);
 }
+@media (prefers-color-scheme: dark) {
+  blockquote {
+    border-left: 10px solid rgba(255, 255, 255, 0.1);
+    color: white;
+  }
+}
 
 .title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-bottom: 2rem;
+}
+
+.title h1 {
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 720px) {
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .title h1 {
+    margin-bottom: 0;
+  }
 }
 
 .output {
